Explanations on arc length parametrization of bezier curves, bezier curves in general and vertebra lengths; also add some todos and remove unused and potentially buggy code

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -81,4 +81,31 @@
  isbn = {978-3-8273-7265-9}
 }
 
+@article{ArcLengthParametrization,
+author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
+year = {2002},
+month = {01},
+pages = {},
+title = {Arc-length parameterized spline curves for real-time simulation}
+}
+
+@book{BezierAndBSplineTechniques,
+author = {Prautzsch, Hartmut and Boehm, Wolfgang and Paluszny, Marco},
+title = {Bezier and B-Spline Techniques},
+year = {2002},
+isbn = {3540437614},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg}
+}
+
+@article{MouseVertebrae,
+author = {SHINOHARA, Harumichi},
+year = {1999},
+month = {06},
+pages = {17-31},
+title = {The Mouse Vertebrae: Changes in the Morphology of Mouse Vertebrae Exhibit Specific Patterns Over Limited Numbers of Vertebral Levels},
+volume = {76},
+journal = {Okajimas folia anatomica Japonica},
+doi = {10.2535/ofaj1936.76.1_17}
+}
 
