--- a/latex/future_work.tex
+++ b/latex/future_work.tex
@@ -8,6 +8,7 @@
  \item mehr verschiedene 3D-Modelle
  \item Beinalgo verbessern / IK
  \item mehr Daten für PCA sammeln
+ \item Gewicht in Algo verwenden
 \end{itemize}
 
 
