--- a/latex/introduction_and_idea.tex
+++ b/latex/introduction_and_idea.tex
@@ -8,6 +8,7 @@
 \chapter{Idee und Ziel}
 
 \begin{itemize}
+ \item Theorie + Implementierung
  \item prozedurale Generierung
  \item Es gibt schon Pflanzen, Landschaften, Wolken \etc aber keine Tiere
  \item viele verschiedene (und möglicherweise doch ähnliche) Tiere generieren für Spiel/Film
