Short paragraph on IK

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -109,3 +109,17 @@ journal = {Okajimas folia anatomica Japonica},
 doi = {10.2535/ofaj1936.76.1_17}
 }
 
+@article{IKSurvey,
+author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
+title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
+journal = {Computer Graphics Forum},
+volume = {37},
+number = {6},
+pages = {35-58},
+keywords = {inverse kinematics, motion capture, biomechanical constraints, General and reference—Surveys and overviews; Computing methodologies—Animation},
+doi = {10.1111/cgf.13310},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13310},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13310},
+year = {2018}
+}
+
