Theories on how to generate a skeleton that looks like a real skeleton

--- a/latex/future_work.tex
+++ b/latex/future_work.tex
@@ -9,6 +9,7 @@
  \item Beinalgo verbessern / IK
  \item mehr Daten für PCA sammeln
  \item Gewicht in Algo verwenden
+ \item Erweiterung auf Mensch? Mensch auch als PCA Datenpunkt?
 \end{itemize}
 
 
