--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -75,6 +75,7 @@
 %% --------------------------------
 \newcommand{\zb}{z.\,B.\ }
 \newcommand{\dash}{d.\,h.\ }
+\newcommand{\va}{v.\,a.\ }
 \newcommand{\bzw}{bzw.\ }
 \newcommand{\etc}{etc.\ }
 
