Section on bones and joints

--- a/latex/bone_models.tex
+++ b/latex/bone_models.tex
@@ -24,6 +24,7 @@ Setzt man sich dagegen etwas über den Gedanken der "`Bounding Box"' hinweg, so 
  
  \item Längen die variiert werden können sollen \zb die Länge der Wirbel oder der Beinabstand der Hüfte sollten genau eine Kantenlänge der 1x1 Box einnehmen.
 \end{itemize}
+\todo{Schwierigkeit bei stark gebogenen Knochen}
 
 Liegen die Modelle in diesem Format vor, können sie einfach eingelesen werden und anhand der Skalierung der Bounding Box skaliert werden.
 Hier wurden vor allem Modelle von menschlichen Knochen verwendet, da sie leichter verfügbar sind. Manche Knochen sind jedoch auch von anderen Tieren. Das führt \zb bei dem verwendeten Unterarmknochen des Pferdes dazu, dass er etwas überdimensionierte Fortsätze am Ellenbogen bekommen, wenn man ihn großskaliert. Das liegt daran, dass dieser Knochen beim Pferd eigentlich relativ kurz ist.
