--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -88,10 +88,12 @@ Linearer Kongruenzgenerator reicht für Zufallszahlen aus, da nur wenige erzeugt
 
 %--------------------------------
 \section{Transformationsmatrizen}
+\label{implementation_detail_matrices}
 
 \todo{Recherchiere warum rechtshändige Koordinatensysteme bzw. konsistene Koordinatensysteme wichtig sind (back face culling, Rotationsrichtung der Matrizen bei positiven Winkeln)}
 
 Jedes Element im Skelett speichert, relativ zu seinem Elternelement, die Position des Ursprungs seines Koordinatensystems. Um den Überblick über die Transformationsmatrizen bzw. Abbildungen behalten, die vom einen ins andere Koordinatensystem umwandeln, hier zwei Übersichtsgrafiken:
+\todo{Erzeugung von Elementen auf der Wirbelsäule mit gegebener Weltposition + gespiegelte Elemente}
 
 \begin{figure}
  \centering
