--- a/latex/introduction_and_idea.tex
+++ b/latex/introduction_and_idea.tex
@@ -29,8 +29,7 @@
  \item Erzeugung von vielen Skelettvarianten bei Eingabe eines Skeletts (nur wenn es relativ leicht möglich ist)
 \end{enumerate}
 
-%-----------------------
-\section{Interaktivität}
+Interaktivität
 
 \begin{itemize}
  \item Eine Anwendung, bei der nach Eingabe von Parametern sofort das komplette Tier generiert wird, ist weniger hilfreich als eine, bei der schrittweise Teile davon generiert werden können (und auch rückgängig gemacht werden können)
