--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -207,7 +207,7 @@
  
 
  %-----------------------------------
- \section{Analyse der PCA-Ergebnisse}
+ \section{Analyse der Ergebnisse}
  \label{section_pca_result_analysis}
  
  Von $29$ Eingabedimensionen gibt es auch $29$ Eigenvektoren mit Eigenwerten größer $0$. Der kleinste hat einen Wert von $0,000024$. Von den Eigenwerten sind $7$ größer als $0,01$. Leider reichen diese $7$ Dimensionen aber noch nicht aus, um die Eingabedaten hinreichend anzunähern. Bei manchen Tieren funktioniert das ganz gut (siehe Archaeopteryx, Abbildung \ref{archaeopteryx}), bei anderen aber eher schlechter (siehe Frosch, Abbildung \ref{frosch}).
@@ -254,7 +254,7 @@
  \todo{Schaubild mit verschiedenen erzeugten Wirbelsäulen?}
  
  %-------------------------------------------------
- \section{Bedingte Verteilung der PCA Eingabedaten}
+ \section{Bedingte Verteilung der Eingabedaten}
  \label{pca_conditions}
  
  
