Add chapter for basics, restructuring

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -52,3 +52,12 @@ JavaView zum anzeigen für groben Überblick (Lizenz checken)
 %   \item Java Swing Bibliothek und JOGL (Java OpenGL Binding) (\url{http://www.jogl.info})
 %  \end{itemize}
 %\end{itemize}
+
+Interaktivität
+
+\begin{itemize}
+ \item Eine Anwendung, bei der nach Eingabe von Parametern sofort das komplette Tier generiert wird, ist weniger hilfreich als eine, bei der schrittweise Teile davon generiert werden können (und auch rückgängig gemacht werden können)
+ \item Teile, die einem nicht gefallen, sollten geändert werden können
+ \item Änderungen können Auswirkungen auf den Rest des Körpers haben (durch Regeln) bzw. manche Änderungen sind nicht möglich
+ \item Könnte verwendet werden um schnell verschiedene Möglichkeiten zu testen
+\end{itemize}
