--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -3,6 +3,8 @@
 \chapter{PCA}
 \label{chapter:pca}
 
+\todo{umbenennen}
+
  % apriori Algorithmus nicht sinnvoll, aber evtl erste Überlegung, da er Implikationen findet, die evtl gewollter Eingabe ähneln
 
  \todo{einheitliche Benennung von PCA Dimension, erhobenen Daten etc.}
