--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -44,7 +44,7 @@ Aufbau der erzeugten / zu erzeugenden Skelette mit Aufbau von Skeletten, die fü
 \end{itemize}
 
 %--------------------------------
-\section{Computerspile und Filme}
+\section{Computerspiele und Filme}
 
 %- - - - - - - - - - -
 \subsection{No Man's Sky}
