--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -139,13 +139,13 @@
 %% -----------------
 \mainmatter
 \pagenumbering{arabic}
-\include{introduction_and_idea}
-\include{previous_work}
+\include{introduction}
 \include{biology}
+\include{basics}
+\include{previous_work}
 \include{first_approaches_and_problems}
 \include{pca}
 \include{generation_of_non_pca_things}
-\include{bone_models}
 \include{additional_features}
 \include{implementation_detail}
 \include{future_work}
